# RPO

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rpo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/rpo/: MainActivity.java  PinpadActivity.java  TransactionEvents.java
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rpo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
